cmake_minimum_required(VERSION 2.8)
project(mfvp)

option(ONE_CCS "build one ccs" OFF)
add_definitions(-DLINUX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O0 -I/usr/include/igfxcmrt/")
include_directories(/usr/include/va/)

if (ONE_CCS)
message("build single frame vp")
set(SRCS ${CMAKE_CURRENT_SOURCE_DIR}/downscale/)
add_executable(sfvp ${SRCS}/downscale.cpp display.cpp.inc)
target_link_libraries(sfvp X11 -ligfxcmrt va va-drm pthread rt)
else()
message("build multi frame vp")
set(SRCS ${CMAKE_CURRENT_SOURCE_DIR}/downscale_multi/downscale_multi.cpp)
add_executable(mfvp ${SRCS} display.cpp.inc)
target_link_libraries(mfvp X11 -ligfxcmrt va va-drm pthread rt)
endif (ONE_CCS)
